fixed form-create-comment overflow

--- a/src/components/CreateComment/createcomment.css
+++ b/src/components/CreateComment/createcomment.css
@@ -2,9 +2,7 @@
     margin-top: 12vh;
     margin-bottom: 5vh;
     margin-left: 5vw;
-    margin-right: 5vw;
     display: flex;
-    width: 100%;
     flex-wrap: wrap;
 }
 
